hphp/test/zend/good/ext-standard-strings/str_shuffle.php
<?php
/* Do not change this test it is a README.TESTING example. */
$s = '123';
var_dump(str_shuffle($s));
var_dump($s);
?>